# func-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
cmd/fhttp/: README.md  main.py
